# willow2-sdk-mods

./: .gitignore  README.md  make_zips.py  pyproject.toml
build_maker/: GEAR_SETS_DESIGN.md  __init__.py  artifact_parts.py  artifacts.py  classmod_parts.py  classmods.py  common.py  dev.py  dump_data.py  grenade_parts.py  grenades.py  loadouts.py  shield_parts.py  shields.py  slots.py  weapon_parts.py  weapons.py
named_saves/: __init__.py  actions.py  named_saves.sdkmod  old.py  pyproject.toml  reloader.py  update_files.py  utils.py
save_file_organizer/: README.md  __init__.py  actions.py  pyproject.toml  reloader.py  save_file_organizer.sdkmod  utils.py
save_options/: __init__.py  hooks.py  options.py  pyproject.toml  registration.py  reloader.py  save_options.sdkmod
speedrun_practice/: README.md  __init__.py  checkpoints.py  game_state.py  gear.py  hooks.py  keybinds.py  network_funcs.py  options.py  pyproject.toml  reloader.py  skills.py  speedrun_practice.sdkmod  text_input.py  utilities.py
