[project]
name = "Save Anything"
version = "1.0"
authors = [{ name = "justin99" }]
description = """
This mod allows save files to be named anything you want, instead of the usual Save####.sav format.

Features:
- Read and write any save files that end in .sav
- Button to rename all saves to a format of "Save#### - <UICharacterName>.sav"
- Option to auto rename saves in the above format any time you enter the main menu (useful if you often move saves around between folders).
- Option to "defrag" your saves. Make them start at "Save0000 - <UICharacterName>.sav" and increase by 1 from there.
"""

[tool.sdkmod]
name = "Save Anything"
download = ""
suppported_games = ["BL2", "TPS"]
mod_type = "Standard"