[project]
name = "Save File Organizer"
version = "1.1"
authors = [{ name = "Justin99" }]
description = """
This mod allows save files to be named anything you want, instead of the usual Save####.sav format. Includes various features to bulk rename files in your save folder.

WARNING: The defrag button loads and resaves your save files. You probably want to make a backup first.
"""

[project.urls]
"Source Code" = "https://github.com/Justin99x/willow2-sdk-mods/tree/main/save_file_organizer"

[tool.sdkmod]
name = "Save File Organizer"
download = "https://github.com/Justin99x/willow2-sdk-mods/raw/refs/heads/main/save_file_organizer/save_file_organizer.sdkmod"
suppported_games = ["BL2", "TPS"]
mod_type = "Standard"


