[project]
name = "Speedrun Practice"
version = "2.1"
authors = [{ name = "Justin99" }]
description = """
Utility mod for practicing speedruns
"""
dependencies = [
  "Commander == 2.5",
]


[tool.sdkmod]
name = "Speedrun Practice"
download = ""
suppported_games = ["BL2"]
mod_type = "Standard"
coop_support = "RequiresAllPlayers"
